Correction contraste + Amélioration structure du code

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,8 +102,8 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: #645d22;
+	color: #000;
+	background-color: #996A18;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
@@ -256,7 +256,7 @@ input[type="submit"] {
 		margin-top: 0;
 		margin-bottom: 1em;
 	}
-	#about-me h6, #about-me p {
+	#about-me p {
 		width: 100%;
 	}
 }
